# rust_cli

./: Cargo.toml  README.md  docker-compose.yml  history.txt
src/: crypto.rs  login.rs  main.rs  reqwest.rs
