[package]
name = "hello-rust"
version = "0.1.0"
authors = ["gathuku <mosesgathuku95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.10"
rust-crypto = "0.2.36"
reqwest = "0.9.22"
rustyline = "5.0.3"
console = "0.9.0"
